--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "emoji-picker-react": "^3.1.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-notification-system": "^0.3.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-webcam": "^5.0.1",
