--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",
+    "axios": "^0.23.0",
     "clsx": "^1.1.0",
     "emoji-picker-react": "^3.1.4",
-    "node-sass": "^4.14.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-notification-system": "^0.3.0",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-webcam": "^5.0.1",
-    "socket.io": "^2.3.0",
+    "redux": "^4.1.1",
+    "socket.io": "^2.4.1",
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
