--- a/package.json
+++ b/package.json
@@ -3,24 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.12",
-    "@material-ui/icons": "^4.9.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.23.0",
-    "clsx": "^1.1.0",
+    "clsx": "^1.1.1",
     "emoji-picker-react": "^3.1.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-notification-system": "^0.3.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-notification-system": "^0.4.0",
     "react-redux": "^7.2.5",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^4.0.3",
     "react-webcam": "^5.0.1",
     "redux": "^4.1.1",
-    "socket.io": "^2.4.1",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
